# framework.uifw.xorg.proto.x11proto-hwc

./: AUTHORS  Makefile.am  configure.ac  hwcproto.h  hwcproto.pc.in  hwctokens.h
packaging/: hwcproto.h  xorg-x11-proto-hwc.spec
